[gd_scene load_steps=3 format=3 uid="uid://c4jv32mhlx21i"]

[ext_resource type="Script" path="res://Scripts/InGame/VisionDetector.gd" id="1_gna6i"]

[sub_resource type="SphereShape3D" id="SphereShape3D_h1o2s"]
radius = 21.474

[node name="VisionDetector" type="Area3D" node_paths=PackedStringArray("collisionShape")]
collision_layer = 0
collision_mask = 0
collision_priority = 0.9
script = ExtResource("1_gna6i")
collisionShape = NodePath("CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_h1o2s")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
